--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -1,223 +1,227 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap");
 
 :root {
-    --violet: #91612b;
-    --grey: #3d535f;
-    --white: pink;
-
+  --violet: #91612b;
+  --grey: #3d535f;
+  --white: pink;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "poppins", sans-serif;
 }
 
-body{
-    overflow: hidden;
+body {
+  overflow: hidden;
 }
 
-.container{
-    width: 100%;
-    min-height: 100vh;
-    background-color: var(--white);
+.container {
+  width: 100%;
+  min-height: 100vh;
+  background-color: var(--white);
 }
 
-nav{
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    height: 80px;
-    z-index: 111;
-    line-height: 80px;
+nav {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  height: 80px;
+  z-index: 111;
+  line-height: 80px;
 }
 
-.logo{
-    display: flex;
-    font-size: 40px;
-    font-weight: 800;
-    color: var(--grey);
-    letter-spacing: 3px;
-    cursor: pointer;
-    text-transform: uppercase;
+.logo {
+  display: flex;
+  font-size: 40px;
+  font-weight: 800;
+  color: var(--grey);
+  letter-spacing: 3px;
+  cursor: pointer;
+  text-transform: uppercase;
 }
 
-b{
-    font-size: 70px;
-    color: var(--violet);
+b {
+  font-size: 70px;
+  color: var(--violet);
 }
 
-.navItems{
-    display: flex;
+.navItems {
+  display: flex;
 }
 
-.navItems li{
-    list-style: none;
-    margin: 0 15px;
+.navItems li {
+  list-style: none;
+  margin: 0 15px;
 }
 
-.navItems li a{
-    font-size: 25px;
-    color: var(--grey);
-    letter-spacing: 3px;
-    text-decoration: none;
-    text-transform: capitalize;
+.navItems li a {
+  font-size: 25px;
+  color: var(--grey);
+  letter-spacing: 3px;
+  text-decoration: none;
+  text-transform: capitalize;
 }
 
 .navItems li:hover a,
-.links a:hover{
-    color: var(--violet);
+.links a:hover {
+  color: var(--violet);
 }
 
-.links a{
-    font-size: 30px;
-    color: var(--grey);
-    margin: 25px 10px;
-
+.links a {
+  font-size: 30px;
+  color: var(--grey);
+  margin: 25px 10px;
 }
 
-.wrapper{
-    display: flex;
-    width: 100%;
-    height: calc(100vh - 80px);
-    justify-content: center;
-    align-items: center;
-    padding: 0 10%;
-    overflow: hidden;
+.wrapper {
+  display: flex;
+  width: 100%;
+  height: calc(100vh - 80px);
+  justify-content: center;
+  align-items: center;
+  padding: 0 10%;
+  overflow: hidden;
 }
 
-.wrapper::before{
-    position: absolute;
-    content: '';
-    height: 600px;
-    width: 600px;
-    border-radius: 50%;
-    left: -12%;
-    top: 40%;
-    background: linear-gradient(45deg, #91612b, pink);
-    animation: object1 6s linear infinite;
+.wrapper::before {
+  position: absolute;
+  content: "";
+  height: 600px;
+  width: 600px;
+  border-radius: 50%;
+  left: -12%;
+  top: 40%;
+  background: linear-gradient(45deg, #91612b, pink);
+  animation: object1 6s linear infinite;
 }
 
-.wrapper::after{
-    position: absolute;
-    content: '';
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
+.wrapper::after {
+  position: absolute;
+  content: "";
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  left: 35%;
+  top: 12%;
+  background: linear-gradient(45deg, #91612b, pink);
+  animation: object2 6s linear infinite;
+}
+
+@keyframes object1 {
+  50% {
+    left: -13%;
+    top: 41%;
+  }
+}
+
+@keyframes object2 {
+  50% {
     left: 35%;
-    top: 12%;
-    background: linear-gradient(45deg, #91612b, pink);
-    animation: object2 6s linear infinite;
+    top: 10%;
+  }
 }
 
-@keyframes object1{
-    50%{
-        left: -13%;
-        top: 41%;
-    }
+.cols {
+  width: 50%;
 }
 
-@keyframes object2{
-    50%{
-        left: 35%;
-        top: 10%;
-    }
+.cols0 {
+  width: 60%;
+  z-index: 5;
 }
 
-.cols{
-    width: 50%;
+.topline {
+  display: block;
+  position: relative;
+  font-size: 35px;
+  letter-spacing: 5px;
+  color: var(--grey);
 }
 
-.cols0{
-    width: 60%;
-    z-index: 5;
+.topline::after {
+  position: absolute;
+  content: "";
+  height: 4px;
+  width: 45px;
+  bottom: 10px;
+  background-color: var(--violet);
 }
 
-.topline{
-    display: block;
-    position: relative;
-    font-size: 35px;
-    letter-spacing: 5px;
-    color: var(--grey);
+h1 {
+  display: block;
+  font-size: 7em;
+  font-weight: 900;
+  color: var(--grey);
 }
 
-.topline::after{
-    position: absolute;
-    content: '';
-    height: 4px;
-    width: 45px;
-    bottom: 10px;
-    background-color: var(--violet);
+.multiText {
+  color: var(--violet);
+  text-transform: capitalize;
 }
 
-h1{
-    display: block;
-    font-size: 7em;
-    font-weight: 900;
-    color: var(--grey);
+p {
+  display: block;
+  width: 90%;
+  font-size: 1.2em;
+  color: var(--grey);
 }
 
-.multiText{
-    color: var(--violet);
-    text-transform: capitalize;
+.btns {
+  width: 100%;
+  position: relative;
+  left: 150px;
 }
 
-p{
-    display: block;
-    width: 90%;
-    font-size: 1.2em;
-    color: var(--grey);
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  font-size: 25px;
+  font-weight: 400;
+  color: var(--white);
+  background-color: var(--grey);
+  padding: 8px 14px;
+  margin: 40px 5px;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+  box-shadow: 0 15px 10px rgba(0, 0, 0, 0.4);
 }
 
-.btns{
-    width: 100%;
-    position: relative;
-    left: 150px;
+button:hover {
+  background-color: var(--violet);
 }
 
-button{
-    outline: none;
-    border: none;
-    cursor: pointer;
-    font-size: 25px;
-    font-weight: 400;
-    color: var(--white);
-    background-color: var(--grey);
-    padding: 8px 14px;
-    margin: 40px 5px;
-    letter-spacing: 2px;
-    text-transform: capitalize;
-    box-shadow: 0 15px 10px rgba(0, 0, 0, 0.4);
+.imgbox {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
-button:hover{
-    background-color: var(--violet);
+.imgbox img {
+  position: relative;
+  border-radius: 2rem;
+  height: 100%;
+  width: calc(130% - 80px);
+  top: -100px;
+  right: 50px;
+  transform: rotateY(180deg);
+  animation: animateUser 4s linear infinite;
 }
 
-.imgbox{
-    position: relative;
-    width: 100%;
-    height: 100%;
+.card-img-top {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
-.imgbox img{
-    position: relative;
-    border-radius: 2rem;
-    height: 100%;
-    width: calc(130% - 80px);
-    top: -100px;
-    right: 50px;
-    transform: rotateY(180deg);
-    animation: animateUser 4s linear infinite;
-}
-
-@keyframes animateUser{
-    50%{
-        right: 30px;
-        top: -90px;
-    }
+@keyframes animateUser {
+  50% {
+    right: 30px;
+    top: -90px;
+  }
 }
 
 /* .imgbox #splash{
@@ -238,5 +242,3 @@ button:hover{
 
     }
 } */
-
-
